--- a/.gitignore
+++ b/.gitignore
@@ -334,5 +334,4 @@ ASALocalRun/
 #'''''''''''''''''''#
 # Project-specific
 #'''''''''''''''''''#
-build/*
-src/images
+/src/DavisSoftware/Content/styles/
