--- a/src/DavisSoftware/package.json
+++ b/src/DavisSoftware/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-content",
   "version": "1.0.0",
-  "description": "A project to build the static content for DavisSoftware.co.uk",
+  "description": "A project to build the static content",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1"
   }
 }
